source/stylesheets/application.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Base */
body {
  @apply leading-relaxed;
  background-color: var(--background-color);
  font-family: var(--font-family);
}

h1 {
  @apply text-4xl font-bold mt-1 mb-2;
}

h2 {
  @apply text-3xl font-bold mt-1 mb-2;
}

h3 {
  @apply text-2xl font-bold mt-1 mb-2;
}

p {
  @apply mt-2 mb-3;
}

a {
  @apply outline-none font-semibold;
  color: var(--main-color);
}

img, svg {
  display: inline-block;
}

label {
  @apply block;
}

input:not([type="radio"]):not([type="checkbox"]):not([type="submit"]), textarea, select {
  @apply w-full mt-2 mb-4 block rounded focus:border-gray-800 focus:ring focus:ring-gray-400 focus:ring-opacity-50;
}

input[type="radio"], input[type="checkbox"] {
  @apply mx-1 w-5 h-5 focus:border-gray-800 focus:ring focus:ring-gray-400 focus:ring-opacity-50;
  color: var(--main-color);
}

.btn {
  @apply text-white py-3 px-6 rounded;
  background-color: var(--main-color);
}

/* Header */
#header {
  background-color: var(--main-color);
}

#header img {
  max-width: 220px;
  max-height: 50px;
}

#header .nav-link {
  @apply text-white p-2 inline-block font-medium rounded;
}

#header .nav-link:hover {
  @apply bg-white;
  color: var(--main-color);
}

/* Sidebar */
#sidebar {
  @apply text-gray-500 bg-gray-800 pb-24 w-full w-64;
  min-width: 280px;
}

/* Cards */
.card {
  @apply shadow-md rounded bg-white;
}

.card-image {
  @apply rounded-t bg-cover bg-center h-48;
}

.card-header {
  @apply px-4 pt-2;
}

.card-body {
  @apply px-4 py-2;
}

.card-actions {
  @apply px-4 pt-4 pb-6;
}

/* Tags */
.tag {
  @apply inline-block mb-1 px-2 font-semibold border-2 rounded-full text-sm;
  color: var(--main-color);
  border-color: var(--main-color);
}

button.tag:hover, button.tag.active {
  @apply text-white;
  background-color: var(--main-color);
}

/* Dropdowns */
.dropdown {
  @apply absolute z-10 mt-2 w-max rounded bg-white shadow-lg;
}

/* Sorting menu */
#sorting-options a {
  @apply block px-4 py-2 text-sm;
}

#sorting-options a:hover, #sorting-options a.active {
  @apply text-white font-bold first:rounded-t last:rounded-b;
  background-color: var(--main-color);
}

/* Share buttons */
#sharing-buttons a {
  @apply inline-flex items-center mb-1 mr-1 p-2 rounded-full text-white;
  background-color: var(--main-color);
}

/* Images in detail page */
.image-gallery {
  @apply flex overflow-auto gap-4 lg:grid lg:grid-cols-4 my-4;
}

.image-gallery img {
  @apply rounded shadow max-h-80;
}

@media (max-width: 640px) {
  .image-gallery img {
    max-width: none;
  }
}

